<resources>
    <string name="app_name">ComparaPrecios</string>

    <!--   familias de productos -->
    <string name="familia1">Alimentación General</string>
    <string name="familia2">Desayunos, dulces y pan</string>
    <string name="familia3">Lácteos</string>
    <string name="familia4">Congelados</string>
    <string name="familia5">Dietética</string>
    <string name="familia6">Bebidas</string>
    <string name="familia7">Frescos</string>
    <string name="familia8">Bebés</string>
    <string name="familia9">Higiene Personal</string>
    <string name="familia10">Droguería y limpieza</string>
    <string name="familia11">Mascotas</string>
    <string name="familia12">Otros</string>
    <!--   tiendas de precios -->
    <string name="tienda1">El corte inglés</string>
    <string name="tienda2">Mercadona</string>
    <string name="tienda3">Carrefour</string>
    <string name="tienda4">Hiperdino</string>
    <string name="tienda5">Spar</string>
    <string name="tienda6">Otro</string>
    <!--   errores -->
    <string name="error_obligatorio">El campo no puede estar vacío</string>
    <string name="error_numero">Campo debe ser númerico</string>
    <string name="error_prueba"></string>
    <!--   Otras etiquetas -->
    <string name="name">Nombre</string>
    <string name="precio">Precio del producto</string>
    <string name="imagen">Añada una imagen al producto</string>
    <string name="contruccion">Aplicación en contrucción. \n Disculpe las molestias. </string>
    <!--   botones -->
    <string name="cabecera">Menú Principal</string>
    <string name="productos">Productos</string>
    <string name="lista">Lista de la Compra</string>
    <string name="infoApp">Info App</string>
    <string name="salir">Salir</string>
    <string name="agregar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

</resources>
