<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.agoney.comparaprecios.MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/cabecera"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productos" />

    <Button
        android:id="@+id/btn_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lista" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infoApp" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />

</LinearLayout>
